fixed: list element aligned

--- a/sass/bottom-container.sass
+++ b/sass/bottom-container.sass
@@ -1,7 +1,8 @@
 .bottom-container
     width: 100%
     display: grid
-    margin-top: 203px
+    font-size: 20px
+    margin-top: 10.15em
     grid-template-columns: repeat(2, 1fr)
     grid-template-rows: repeat(2, 1fr)
 
@@ -28,7 +29,6 @@
             font-size: 22px
 
     &__information
-        height: 26.7%
         width: 581px
         grid-row-start: 2
         grid-column-start: 1
@@ -51,7 +51,6 @@
         &__item, &__flex__item
             justify-self: center
             font-size: 16px
-            height: 161px
             background-color: #F4F4F4
             border-radius: 24px
 
