--- a/sass/list.sass
+++ b/sass/list.sass
@@ -3,19 +3,17 @@
     background-color: #252525
     display: flex
     border-radius: 40px
-    width: 1312px
-    height: 251px
+    width: 82.2%
     position: absolute
     justify-content: space-around
     left: 50%
     transform: translateX(-50%)
-    top: 50%
+    top: 42.2%
 
 
     &__items 
         width: 285px
-        height: 143px
-        margin: 54.1px
+        margin: 2.66em
         font-size: 20px
         line-height: 27px
 
@@ -23,5 +21,8 @@
         &__title 
             margin-top: 10px
             margin-bottom: 20px
-            font-size: 32px
+            font-size: 27px
             opacity: 0.8
+
+        &__description
+            margin: 0
