--- a/sass/top-container.sass
+++ b/sass/top-container.sass
@@ -1,27 +1,26 @@
 .top-container
     width: 100%
     background-image: url('./resources/background-image.png')
-    padding-top: 23.6%
-    padding-bottom: 35.5%
-    
+    font-size: 20px
+    padding: 12.1em 0 18.2em
 
     &__main
         width: 47%
+        text-align: center
         margin-left: 50%
         transform: translateX(-50%)
-        text-align: center
-
+        
         &__title
             font-size: 80px
             font-weight: 700
-            margin-top: 0
-            margin-bottom: 32px
+            margin: 0
 
         &__description
             width: 93.4%
             font-size: 24px
-            margin-top: 0
-            margin-bottom: 32px
+            margin: 1.33em 0
+
+
 
         &__button
             width: 32.8%
